<resources>
    <string name="app_name">Nicestart</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="Cancel">CANCEL</string>
    <string name="image">image</string>
    <string name="imagehipman">imagehipman</string>
    <string name="usuario">Usuario</string>
    <string name="correo">Correo</string>
    <string name="direccion">direccion</string>
    <string name="biografia">biografia</string>
    <string name="Imagegirl">Imagegirl</string>
    <string name="Nicestart">Nicestart</string>
    <string name="TextView">TextView</string>
</resources>